update css to fix extra margin oon left side after button clicked

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ button {
 
 .column1 {
     text-align: center;
+    width: 30%;
 }
 
 .column2 h1, .column2 textarea {
@@ -42,20 +43,19 @@ button {
 }
 
 .column2 textarea {
-  /* width: 100%; */
-  height: 2rem;
-  /* margin-right: 50px; */
-  border: red 1px solid;
+    /* width: 100%; */
+    height: 2rem;
+    /* margin-right: 50px; */
+    border: red 1px solid;
 }
 
 .gridImage {
-  background-color: red;
-  font-size: 70px;
-  text-align: center;
-  line-height: 8rem;
-  width: 8rem;
-  height: 8rem;
-  background-color: rgb(236, 236, 227);
+    font-size: 70px;
+    text-align: center;
+    line-height: 8rem;
+    width: 8rem;
+    height: 8rem;
+    border: 1px solid black;
 }
 
 .fullGrid {
